--- a/.github/workflows/main_sts-api.yml
+++ b/.github/workflows/main_sts-api.yml
@@ -70,21 +70,10 @@ jobs:
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_15D73801BB284636813620089175BCEF }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_31D4E421DC8F46228CE3879AA027E992 }}
 
-      - name: 'Configure Azure App Service Settings'
-        uses: azure/appservice-settings@v1
-        with:
-          app-name: 'sts-api'
-          app-settings-json: |
-            [
-                {
-                    "name": "MSDEPLOY_RENAME_LOCKED_FILES",
-                    "value": "1",
-                    "slotSetting": false
-                }
-            ]
-
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
         with:
           app-name: 'sts-api'
           slot-name: 'Production'
+          
